2005-06-20  Carl Worth  <cworth@cworth.org>

	* configure.in: Add -head to CAIRO_VERSION after tagging with
	SNAPSHOT_0_5_1.

2005-06-20  Carl Worth  <cworth@cworth.org>

	* Makefile.am: Force distcheck to enable gtk-doc.

2005-06-20  Carl Worth  <cworth@cworth.org>

	* NEWS: Added notes for snapshot 0.5.1

	* configure.in: Increment CAIRO_VERSION to 0.5.1

2005-06-20  Owen Taylor  <otaylor@redhat.com>

	Workaround for https://bugs.freedesktop.org/show_bug.cgi?id=3566

	* src/cairo-xlib-surface.c: Detect servers with a bug in 
	repeating surfaces by checking vendor string and version.

	* src/cairo-xlib-surface.c: For such surfaces either fall back to
	an implementation with the core protocol or fall back to the image
	backend.

	* src/cairo-xlib-surface.c: Save clip rects when setting a
	clip region on a surface so that we set the right clip for the
	surface's GC if we create it later.

2005-06-20  Carl Worth  <cworth@cworth.org>

	* src/cairo-matrix.c: (_cairo_matrix_is_integer_translation):
	Make out parameters optional. Style cleanup.

2005-06-20  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-pattern.c: (_cairo_pattern_is_opaque_solid): Abstract
	CAIRO_ALPHA_IS_OPAQUE out for general internal use.

	* src/cairo.c: (cairo_paint_with_alpha): Optimize to defer to
	cairo_paint if the alpha value is actually opaque.

2005-06-20  Carl Worth  <cworth@cworth.org>

	* src/cairo.h:
	* src/cairo-private.h:
	* src/cairo.c: (_cairo_error), (cairo_create): Rip out
	cairo_set_error_notfiy function as it is clear that it is not the
	right approach.

	* test/.cvsignore:
	* test/Makefile.am:
	* test/error-notify.c: Remove error-notify test.

2005-06-17  Carl Worth  <cworth@cworth.org>

	* src/cairo-xcb-surface.c (_get_image_surface): Remove references
	to repeat and matrix fields that no longer exist.

2005-06-17  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xcb-surface.c (_get_image_surface)
	* src/cairo-xlib-surface.c (_get_image_surface): Fix 